discussion/kv_engine/155097/155097_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time (memcached)

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7 in memcached.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

Note that this now requires that the LOG_<LEVEL> macros always take a
valid fmtlib format string as the first argument, a raw string literal
is no longer supported - the following will no longer compile:

    LOG_DEBUG("Something happened"); // compile-time error.

Instead, the _RAW macros added in the previous patch should be used:

    LOG_DEBUG_RAW("Something else happened"); OK

Note: The issue here is that to perform compile-time format string
      checking, the format string must be wrapped in FMT_STRING() -
      before the format string is evaluated / passed into the actual
      logging functions / methods. However, one cannot pass a
      non-string literatl to FMT_STRING - essentially by design it
      fails at compile-time if it doesn't have {} placeholders.

      To address this (and still allow both styles of parameters) we
      _could_ in theory do some complex preprocessor logic - count the
      number of variadic arguments at compile-time and only apply
      FMT_STRING() macro to first if there is 2 or more arguments in
      total. I got something working for GCC and clang and which did
      this, but it didn't work for MSVC and the GCC one triggered a
      load of warnings, hence just making original macros always
      fmt-style, and adding _RAW for plan unformatted values.

Change-Id: I5f4e84c04deb5a4e6ed5eae243a9327cd017ec60

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-06-04 11:17:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 11:43:28.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31135/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/breakpad.cc:83:5:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31135/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9495/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:83:5: error: expected expression [clang-diagnostic-error]
    LOG_CRITICAL("Stack backtrace of crashed thread:");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:180:5: note: expanded from macro "LOG_CRITICAL"
    CB_LOG_ENTRY(spdlog::level::level_enum::critical, __VA_ARGS__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:159:71: note: expanded from macro "CB_LOG_ENTRY"
            _logger_->log(severity, CHECK_FMT_STRING(fmt), __VA_ARGS__); \
                                                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9495/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:83:5:
error: expected expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9495/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1188/ : FAILURE

Compile error at [2021-06-04T11:18:18.743Z] ../kv_engine/utilities/breakpad.cc:83:5:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1188/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11069/ : FAILURE

Compile error at [2021-06-04T11:17:58.091Z] ../kv_engine/logger/logger.h:159:71:
error: expected primary-expression before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11069/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11214/ : FAILURE

Compile error at [2021-06-04T11:18:35.853Z] ../kv_engine/logger/logger.h:159:71:
error: expected primary-expression before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11214/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19071/ : FAILURE

Compile error at [2021-06-04T11:20:06.156Z] ../kv_engine/utilities/breakpad.cc:83:5:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19071/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11486/ : FAILURE

Compile error at [2021-06-04T11:17:55.673Z] ../kv_engine/utilities/breakpad.cc:83:5:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11486/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8091/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36446/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/46/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10139/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
